--- a/.gitignore
+++ b/.gitignore
@@ -128,3 +128,7 @@ dist
 .yarn/build-state.yml
 .yarn/install-state.gz
 .pnp.*
+
+# project structure files
+.project_structure_ignore
+project_structure.txt
